--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.css" />
 <head>
   <meta charset="utf-8">
   <title>TheHottestReviews</title>
@@ -13,5 +14,26 @@
 </head>
 <body>
   <app-root></app-root>
+  <script src="https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.js" data-cfasync="false"></script>
+  <script>
+  window.cookieconsent.initialise({
+    "palette": {
+      "popup": {
+        "background": "#ffffff",
+        "text": "#000000"
+      },
+      "button": {
+        "background": "transparent",
+        "text": "#673ab7",
+        "border": "#673ab7"
+      }
+    },
+    "content": {
+      "message": "Ce site utilise des cookies pour vous assurer la meilleure expérience possible",
+      "dismiss": "Compris !",
+      "link": "En savoir plus"
+    }
+  });
+  </script>
 </body>
 </html>
