--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -14,6 +14,7 @@
 </head>
 <body>
   <app-root></app-root>
+  <!--Cookie consent cdn and parameters (using https://www.osano.com/)-->
   <script src="https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.js" data-cfasync="false"></script>
   <script>
   window.cookieconsent.initialise({
